# big-data-project-ucentral

./: .gitignore  app.py  pyproject.toml  wsgi.py
app/: __init__.py  config.py  extensions.py
app/auth/: __init__.py  routes.py
app/database/: __init__.py  routes.py  services.py
app/elasticsearch/: __init__.py  routes.py
app/main/: __init__.py  routes.py
app/static/css/: styles.css
app/templates/: about.html  base_public.html  buscador.html  contacto.html  error.html  index.html  login.html  ver_documento.html
app/templates/elastic/: admin.html  agregar_documentos.html  base.html  listar_documentos.html  ver_documento.html
app/templates/gestion/: base.html  crear_coleccion.html  crear_db.html  dashboard.html  editar_documento.html  elastic_listar_documentos.html  importar_documentos.html  index.html  index.html.bak  ver_coleccion.html
