[tool.poetry]
name = "big-data-project-ucentral"
version = "0.1.0"
description = "Proyecto de Big Data para la Universidad Central"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
Flask = "^2.3.3"
pymongo = "^4.5.0"
gunicorn = "^21.2.0"
elasticsearch = "^8.9.0"
python-dotenv = "^1.1.0"
flask-login = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
